Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -569,6 +569,7 @@ label:focus,
 
 .nav-controller div{
     display: inline-block;
+    margin: 0 0 0 10px;
 }
 .nav-title{
     padding: 5px 0 0 !important;
